@@ -1,0 +1,44 @@
+<?php
+/**
+ * pgsql class
+ *
+ * Class to interact with the system
+ *
+ * @version   $Id$
+ * @author Christian Bayle
+ * @date 2004-02-05
+ *
+ * This file is part of GForge.
+ *
+ * GForge is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * GForge is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with GForge; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+class pgsql extends System {
+	/**
+	*	pgsql() - CONSTRUCTOR
+	*
+	*/
+	function pgsql() {
+		$this->System();
+		return true;
+	}
+}
+
+// Local Variables:
+// mode: php
+// c-file-style: "bsd"
+// End:
+
+?>
