@@ -1,3 +1,7 @@
+2004-10-24  Roland Mas  <99.roland.mas@aist.enst.fr>
+
+	* common/include/system/pgsql.class: New file.
+
 2004-10-22  Tim Perdue <tim@gforge.org>
 
 	* Changed db/gforge3.sql to db/gforge.sql - gforge.sql is 
